# docs/swagger.json
@@ -108,8 +108,8 @@
                     }
                 ],
                 "responses": {
-                    "2001": {
-                        "description": "",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "allOf": [
                                 {
